--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,33 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-03 Fri 09:25]
+#+CAPTION: Clock summary at [2017-11-03 Fri 10:01]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *48:41* |       |       | 100.0 |
+| *Total time*                                                                | *49:09* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 48:41   |       |       | 100.0 |
-| Active                                                                      |         | 48:41 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.8 |
+| Stories                                                                     | 49:09   |       |       | 100.0 |
+| Active                                                                      |         | 49:09 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:49 |   3.7 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   2.1 |
-| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.2 |
+| COMPLETED Consider revamping the project logo                               |         |       |  2:02 |   4.1 |
 | COMPLETED Rename top-level transformations                                  |         |       |  1:33 |   3.2 |
 | COMPLETED Clean-up context usage                                            |         |       |  0:38 |   1.3 |
-| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.3 |
+| COMPLETED Housekeeper should know of text models                            |         |       |  2:05 |   4.2 |
 | COMPLETED Rename the model to text transforms                               |         |       |  0:29 |   1.0 |
 | COMPLETED Rename kernel and family                                          |         |       |  2:44 |   5.6 |
-| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.1 |
+| COMPLETED Clean up formatter names                                          |         |       |  1:00 |   2.0 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   2.0 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   2.3 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  28.7 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  28.4 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   1.1 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.2 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.2 |
-| COMPLETED Move artefact into yarn                                           |         |       |  2:16 |   4.7 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  18.5 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   6.1 |
+| COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.8 |
+| COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.8 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:01 |  18.3 |
 | STARTED Experiment with a database model                                    |         |       |  1:20 |   2.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -529,7 +530,7 @@ meta-types.
 
 *** COMPLETED Move artefact into yarn                                 :story:
     CLOSED: [2017-11-02 Thu 19:39]
-    CLOCK: [2017-11-03 Fri 08:45]--[2017-11-03 Fri 09:25] =>  0:40
+    CLOCK: [2017-11-03 Fri 08:45]--[2017-11-03 Fri 09:30] =>  0:45
     CLOCK: [2017-11-02 Thu 18:41]--[2017-11-02 Thu 19:39] =>  0:58
     CLOCK: [2017-11-02 Thu 09:06]--[2017-11-02 Thu 09:17] =>  0:11
     CLOCK: [2017-11-02 Thu 09:01]--[2017-11-02 Thu 09:05] =>  0:04
@@ -538,6 +539,13 @@ meta-types.
 
 Originally we had placed artefact in the formatters model, but now
 that we have text models, it makes more sense to have it in yarn.
+
+*** COMPLETED Supply the yarn options to prober                       :story:
+    CLOSED: [2017-11-03 Fri 09:43]
+    CLOCK: [2017-11-03 Fri 09:38]--[2017-11-03 Fri 10:01] =>  0:23
+
+At present most of the arguments supplied to prober come from the
+options anyway - why not just supply the options to it?
 
 *** STARTED Generate file paths as a transform                        :story:
     CLOCK: [2017-10-21 Sat 10:30]--[2017-10-21 Sat 11:27] =>  0:57
@@ -929,11 +937,6 @@ Notes:
 
 - how does this affect plugins? will it still be possible to register
   formatters from a shared library?
-
-*** Supply the yarn options to prober                                 :story:
-
-At present most of the arguments supplied to prober come from the
-options anyway - why not just supply the options to it?
 
 *** Consider bucketing elements by meta-type in model                 :story:
 
