--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-02 Sat 22:00]
+#+CAPTION: Clock summary at [2017-12-02 Sat 23:08]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *42:15* |       |       | 100.0 |
+| *Total time*                                                                | *43:22* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 42:15   |       |       | 100.0 |
-| Active                                                                      |         | 42:15 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.5 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.0 |
-| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.4 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  20.6 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  32.5 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.6 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   7.0 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.5 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  9:44 |  23.0 |
+| Stories                                                                     | 43:22   |       |       | 100.0 |
+| Active                                                                      |         | 43:22 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.4 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.9 |
+| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  20.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  31.6 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.4 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.8 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.4 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       | 10:51 |  25.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-02 Sat 22:01]--[2017-12-02 Sat 23:08] =>  1:07
     CLOCK: [2017-12-02 Sat 21:48]--[2017-12-02 Sat 22:00] =>  0:12
     CLOCK: [2017-12-02 Sat 21:16]--[2017-12-02 Sat 21:47] =>  0:31
     CLOCK: [2017-12-02 Sat 20:55]--[2017-12-02 Sat 21:15] =>  0:20
