--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-03 Sun 00:22]
+#+CAPTION: Clock summary at [2017-12-03 Sun 00:46]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:32* |       |       | 100.0 |
+| *Total time*                                                                | *44:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:32   |       |       | 100.0 |
-| Active                                                                      |         | 44:32 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.8 |
+| Stories                                                                     | 44:55   |       |       | 100.0 |
+| Active                                                                      |         | 44:55 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.7 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.3 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  19.5 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  30.8 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  19.3 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  30.5 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.2 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.6 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.4 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       | 12:01 |  27.0 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.3 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       | 12:24 |  27.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-03 Sun 00:22]--[2017-12-03 Sun 00:45] =>  0:23
     CLOCK: [2017-12-02 Sat 23:49]--[2017-12-03 Sun 00:21] =>  0:32
     CLOCK: [2017-12-02 Sat 23:18]--[2017-12-02 Sat 23:48] =>  0:30
     CLOCK: [2017-12-02 Sat 23:09]--[2017-12-02 Sat 23:17] =>  0:08
