--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-03 Sun 00:46]
+#+CAPTION: Clock summary at [2017-12-04 Mon 22:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:55* |       |       | 100.0 |
+| *Total time*                                                                | *46:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:55   |       |       | 100.0 |
-| Active                                                                      |         | 44:55 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.3 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.7 |
-| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.3 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  19.3 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  30.5 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.2 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.6 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.3 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       | 12:24 |  27.6 |
+| Stories                                                                     | 46:54   |       |       | 100.0 |
+| Active                                                                      |         | 46:54 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.2 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   4.5 |
+| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.2 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  18.5 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  29.2 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.0 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.3 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.2 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       | 14:23 |  30.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,8 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-04 Mon 22:35]--[2017-12-04 Mon 22:41] =>  0:06
+    CLOCK: [2017-12-04 Mon 20:41]--[2017-12-04 Mon 22:34] =>  1:53
     CLOCK: [2017-12-03 Sun 00:22]--[2017-12-03 Sun 00:45] =>  0:23
     CLOCK: [2017-12-02 Sat 23:49]--[2017-12-03 Sun 00:21] =>  0:32
     CLOCK: [2017-12-02 Sat 23:18]--[2017-12-02 Sat 23:48] =>  0:30
