--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-07 Thu 09:08]
+#+CAPTION: Clock summary at [2017-12-09 Sat 11:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *55:19* |       |       | 100.0 |
+| *Total time*                                                                | *55:46* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 55:19   |       |       | 100.0 |
-| Active                                                                      |         | 55:19 |       | 100.0 |
+| Stories                                                                     | 55:46   |       |       | 100.0 |
+| Active                                                                      |         | 55:46 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.0 |
-| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.7 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.8 |
+| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.6 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.6 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.2 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  29.0 |
-| COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.8 |
+| COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.6 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.7 |
@@ -36,8 +36,8 @@
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.3 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.9 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Create the =external= model                                         |         |       |  2:38 |   4.8 |
-| STARTED Create a =probing= model                                            |         |       |  0:06 |   0.2 |
+| STARTED Create the =external= model                                         |         |       |  2:38 |   4.7 |
+| STARTED Create a =probing= model                                            |         |       |  0:33 |   1.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -545,6 +545,7 @@ Notes:
 - rename adapter to factory to match processed object.
 
 *** STARTED Create a =probing= model                                  :story:
+    CLOCK: [2017-12-09 Sat 11:01]--[2017-12-09 Sat 11:28] =>  0:27
     CLOCK: [2017-12-07 Thu 09:01]--[2017-12-07 Thu 09:07] =>  0:06
 
 We need to move the probing logic into a transforms model, so we can
